sky/commands.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: commands
  namespace: sky
  labels:
    app: commands
spec:
  replicas: 3
  progressDeadlineSeconds: 2592000
  selector:
    matchLabels:
      app: commands
  template:
    metadata:
      labels:
        app: commands
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: commands
        image: registry.flou.dev/sky-commands:9015861d-b550-4936-870b-811d44150240
        ports:
          - containerPort: 8008
          - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "50m"
          limits:
            memory: "700Mi"
            cpu: "500m"
  strategy:
    canary: 
      maxUnavailable: 1
      canaryService: sky-commands-canary-service
      stableService: sky-commands-main-service
      steps:
      - setWeight: 5
      - pause:
          duration: 10m
      - setWeight: 20
      - pause: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sky-commands-main-service
spec:
  selector:
    app: commands
  ports:
  - port: 80
    targetPort: 80
    name: api
  - port: 8008
    targetPort: 8008
    name: websocket
---
apiVersion: v1
kind: Service
metadata:
  name: sky-commands-canary-service
spec:
  selector:
    app: commands
  ports:
  - port: 80
    targetPort: 80
    name: api
  - port: 8008
    targetPort: 8008
    name: websocket
---
apiVersion: v1
kind: Service
metadata:
  name: commands-metrics-service
  namespace: sky
  labels:
    app: commands-metrics-service
spec:
  selector:
    app: commands
  ports:
  - port: 80
    targetPort: 80
    name: metrics
    protocol: TCP
