sky/filter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter
  namespace: sky
  labels:
    app: filter
spec:
  selector:
    matchLabels:
      app: filter
  replicas: 1
  template:
    metadata:
      labels:
        app: filter
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: filter
        image: registry.flou.dev/sky-filter:ea25a774-0daf-4d51-a3d2-7e3fbcd919fb
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: filter
  namespace: sky
spec:
  selector:
    app: filter
  ports:
  - port: 80
    targetPort: 80
