sky/flipper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipper
  namespace: sky
  labels:
    app: flipper
spec:
  selector:
    matchLabels:
      app: flipper
  replicas: 12
  template:
    metadata:
      labels:
        app: flipper
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: flipper
        image: registry.flou.dev/sky-flipper:e8487301-08ea-4e3b-8770-1c832e4db1b9
        ports:
        - containerPort: 80
          name: web
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: flipper
  namespace: sky
spec:
  selector:
    app: flipper
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flipper-metrics-service
  namespace: sky
  labels:
    app: flipper-metrics-service
spec:
  selector:
    app: flipper
  ports:
  - port: 80
    targetPort: 80
    name: metrics
    protocol: TCP
