sky/frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: sky
  labels:
    app: frontend
spec:
  replicas: 5
  progressDeadlineSeconds: 2592000
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: frontend
        image: registry.flou.dev/sky-frontend:6e59d471-cf7f-4f20-a653-42a1c1b92d7a
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
  strategy:
    blueGreen:
      activeService: frontend
      previewService: frontend-preview
      autoPromotionEnabled: false
      previewReplicaCount: 1
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sky
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: sky
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
