sky/imgproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
  namespace: sky
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: imgproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      containers:
      - name: imgproxy
        image: willnorris/imageproxy:latest
        args: ["-addr", "0.0.0.0:8080", "-cache" ,"memory", "-allowHosts", "sky.coflnet.com,sky.lea.moe,mc-heads.net,crafatar.com,sky.shiiyu.moe,static.coflnet.com"]
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
          requests:
            memory: "250Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
  namespace: sky
spec:
  selector:
    app: imgproxy
  ports:
    - port: 80
      targetPort: 8080
