sky/indexer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
  namespace: sky
  labels:
    app: indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: indexer
        image: registry.flou.dev/sky:4f547064-1f32-42c0-bbac-8b333cbc93e4
        ports:
          - containerPort: 8008
        livenessProbe:
          httpGet:
            path: /status
            port: 8008
          initialDelaySeconds: 600
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 10
        resources:
          requests:
            memory: "3000Mi"
            cpu: "3000m"
              #   volumeMounts:
              #     - mountPath: /data
              #       name: indexer-mount-migration
              #       subPath: data
              # volumes:
              #   - name: indexer-mount-migration
              #     persistentVolumeClaim:
              #       claimName: indexer-claim-migration
---
apiVersion: v1
kind: Service
metadata:
  name: indexer-service
  namespace: sky
spec:
  selector:
    app: indexer
  ports:
    - port: 8008
      targetPort: 8008
---
apiVersion: v1
kind: Service
metadata:
  name: indexer-metrics-service
  namespace: sky
  labels:
    app: indexer-metrics-service
spec:
  selector:
    app: indexer
  ports:
  - port: 80
    targetPort: 80
    name: metrics
    protocol: TCP
