sky/mc-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc-connect
  namespace: sky
  labels:
    app: mc-connect
spec:
  selector:
    matchLabels:
      app: mc-connect
  replicas: 1
  template:
    metadata:
      labels:
        app: mc-connect
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: mc-connect
        image: registry.flou.dev/sky-mc-connect:c705c52a-8a91-4712-bd39-045303e052ca
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: mc-connect
  namespace: sky
spec:
  selector:
    app: mc-connect
  ports:
  - port: 80
    targetPort: 80
