sky/server.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: light-client
  namespace: sky
  labels:
    app: light-client
spec:
  revisionHistoryLimit: 5
  replicas: 5
  progressDeadlineSeconds: 2592000
  selector:
    matchLabels:
      app: light-client
  template:
    metadata:
      labels:
        app: light-client
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: light-client
        image: registry.flou.dev/sky:4f547064-1f32-42c0-bbac-8b333cbc93e4
        ports:
          - containerPort: 8008
          - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "50m"
          limits:
            memory: "700Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /status
            port: 8008
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
  strategy:
    blueGreen:
      activeService: light-client-service
      previewService: light-client-preview-service
      autoPromotionEnabled: false
      previewReplicaCount: 1
      maxUnavailable: 2
---
apiVersion: v1
kind: Service
metadata:
  name: light-client-service
  namespace: sky
spec:
  selector:
    app: light-client
  ports:
    - port: 8008
      targetPort: 8008
      name: "websocket"
    - port: 80
      targetPort: 80
      name: "asp"
---
apiVersion: v1
kind: Service
metadata:
  name: light-client-preview-service
  namespace: sky
spec:
  selector:
    app: light-client
  ports:
    - port: 8008
      targetPort: 8008
      name: "websocket"
    - port: 80
      targetPort: 80
      name: "asp"
---
apiVersion: v1
kind: Service
metadata:
  name: light-client-metrics-service
  namespace: sky
  labels:
    app: light-client-metrics-service
spec:
  selector:
    app: light-client
  ports:
  - port: 80
    targetPort: 80
    name: metrics
    protocol: TCP
