sky/stage-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage-frontend
  namespace: sky
  labels:
    app: stage-frontend
spec:
  selector:
    matchLabels:
      app: stage-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: stage-frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: stage-frontend
        image: registry.flou.dev/sky-stage-frontend:6ee87e8a-d072-49c4-99ff-a1ecf0b3d49f
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: stage-frontend
  namespace: sky
spec:
  selector:
    app: stage-frontend
  ports:
  - port: 80
    targetPort: 80
