sky/subscriptions.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: subscriptions
  namespace: sky
  labels:
    app: subscriptions
spec:
  selector:
    matchLabels:
      app: subscriptions
  serviceName: subscriptions
  replicas: 1
  template:
    metadata:
      labels:
        app: subscriptions
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: subscriptions
        image: registry.flou.dev/sky-subscriptions:19e54d2c-69f1-484c-9770-1fae4ac50dc3
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: subscriptions
  namespace: sky
spec:
  selector:
    app: subscriptions
  ports:
  - port: 80
    targetPort: 80
