sky/updater.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: updater
  namespace: sky
  labels:
    app: updater
spec:
  replicas: 3
  serviceName: updater
  updateStrategy: 
    type: RollingUpdate
  selector:
    matchLabels:
      app: updater
  template:
    metadata:
      labels:
        app: updater
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: updater
        image: registry.flou.dev/sky-updater:7eb3dc8f-0873-4929-a0c5-b7db44ad50a4
        resources:
          requests:
            memory: "400Mi"
            cpu: "750m"
---
apiVersion: v1
kind: Service
metadata:
  name: updater
spec:
  selector:
    app: updater
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: updater-metrics-service
  namespace: sky
  labels:
    app: updater-metrics-service
spec:
  selector:
    app: updater
  ports:
  - port: 80
    targetPort: 80
    name: metrics
    protocol: TCP
